Bug 477054 Implement onProgress for the send later service, and fix counts for sending more than once in the same session. r/sr=bienvenu